--- a/V3.md
+++ b/V3.md
@@ -80,6 +80,7 @@ version: `String?` (Irrelevant for `MappingsType.MOJANG`, leave either null or b
 
 </details>
 
+<details>
 <summary>Mod Build Script</summary>
 # The Mod Build Script plugin will auto generate a mod json for you
 ## As of iridium version 1.2.0 a closure/configuration action is used to define its properties
@@ -105,3 +106,4 @@ group = project.properties["maven_group"] as String
 version = project.properties["mod_version"] as String
 description = "Example Mod Description"
 ```
+</details>
